# agent_auction

./: .gitignore  agno_agent.py  pyproject.toml  teste1.txt
.kiro/specs/google-sheets-lead-integration/: .config.kiro  design.md  requirements.md
.kiro/specs/sdr-agent/: .config.kiro  requirements.md
src/: main.py  prompts.py
